#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/common ${CMAKE_SOURCE_DIR}/src/algorithm CMAKE_SOURCE_DIR}/src/core/search)
include_directories(${CMAKE_SOURCE_DIR}/src/ ${CMAKE_SOURCE_DIR}/src/core/algorithm {CMAKE_SOURCE_DIR}/src/core/search)
SET (LIB_DOCUMENT_SRC document.cpp text_field.cpp)
add_library(document SHARED ${LIB_DOCUMENT_SRC})
#target_link_libraries()
SET (TEST_DOCUMENT_SRC document.cpp document_test.cpp)
add_executable(document_test ${TEST_DOCUMENT_SRC}) 
target_link_libraries(document_test gtest gtest_main)

install(TARGETS document DESTINATION lib)