link_directories(${CMAKE_SOURCE_DIR}/src/common ${CMAKE_SOURCE_DIR}/src/algorithm CMAKE_SOURCE_DIR}/src/core/search)
include_directories(${CMAKE_SOURCE_DIR}/src/ ${CMAKE_SOURCE_DIR}/src/core/algorithm {CMAKE_SOURCE_DIR}/src/core/search)
#set(LIB_INDEX_SRC document.cpp term_reader.cpp term.cpp)
#add_library(index SHARED ${LIB_INDEX_SRC})
#target_link_libraries(index common pthread algorithm)
add_subdirectory(memory)
add_subdirectory(serialized)